--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,9 @@
   ],
   "license": "MIT",
   "require": {
-    "miaoxing/app": "dev-master@dev"
+    "miaoxing/app": "dev-master@dev",
+    "league/flysystem": "1.*",
+    "league/flysystem-sftp": "1.*"
   },
   "autoload": {
     "psr-4": {
