移除 flysystem 依赖

--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,7 @@
   ],
   "license": "MIT",
   "require": {
-    "miaoxing/app": "dev-master@dev",
-    "league/flysystem": "1.*",
-    "league/flysystem-sftp": "1.*"
+    "miaoxing/app": "dev-master@dev"
   },
   "autoload": {
     "psr-4": {
