chore: 配置包为插件类型

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "miaoxing/config",
+  "type": "miaoxing-plugin",
   "description": "Miaoxing Config Plugin",
   "keywords": [
     "miaoxing", "config"
