--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
   },
   "extra": {
     "require-ci": {
-      "miaoxing/dev": "miaoxing/dev as 6.x-dev"
+      "miaoxing/dev": "miaoxing/dev as 6.x-dev",
+      "miaoxing/phpstan-miaoxing": "miaoxing/phpstan-miaoxing as 0.1.x-dev"
     }
   }
 }
